# exchanger.py

./: .envrc  .gitignore  CHECKLIST_INTEGRATION_README.md  CHECKLIST_SIMPLIFICATION_SUMMARY.md  CLAUDE.md  CURSOR_FIX_README.md  DEPLOY_PROD.md  Dockerfile.task-creator  Dockerfile.universal-worker  Exchanger_quick_guide.md  MODULES.md  OPTIMIZATION_SUMMARY.md  ORIGINATOR_ID_IMPLEMENTATION.md  README.md  SERVICES_MANAGEMENT.md  TEST_PROCESS_RESET_README.md  activate.sh  activate_venv.sh  bitrix24_queue.json  camunda_deploy_Разработка и получение разрешительной документации.bpmn  camunda_Процессы УУ. Модель для автоматизации.bpmn  camunda_Разработка и получение разрешительной документации.bpmn  config.env.example  cursor-monitor-control.sh  cursor_optimization.sh  cursor_safe_start.sh  cursor_terminal_fix.json  deploy_shema.cmd  docker-compose.yml  env_loader.py  get_shema.cmd  install.sh  kill-cursor-bash.sh  process_reset_tool.py  pyproject.toml  requirements.txt  restart_services.sh  Процессы УУ. Модель для автоматизации.bpmn  Процессы УУ. Модель для автоматизации_analysis.csv  Процессы УУ. Модель для автоматизации_assignees.json  (+3 more)
.claude/: settings.json
.doc/: Camunda Worker.md  IMENA Camunda Module.md  IMENA RabbitMQ Module.md  Imena Storm Module.md  Imena Tasks Templates Module.md  Task Creator.md  merge_docs.py  merged_documentation.md  Компоненты imena.tasks.md  Компоненты модуля imena.camunda.md  Компоненты модуля imena.rmq.md  Компоненты модуля imena.storm.md  Страницы модуля Imena Camunda.md  Страницы модуля Imena RMQ.md  Страницы модуля Imena Storm.md  (+1 more)
(+263 files in other folders)
